unpackaged/main/default/objects/Activity/fields/Automated_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Automated_Email_Address__c</fullName>
    <label>Automated Email Address</label>
    <type>Email</type>
</CustomField>