unpackaged/main/default/objects/Activity/fields/Automated_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Automated_Email_Status__c</fullName>
    <label>Automated Email Status</label>
    <type>TextArea</type>
</CustomField>