unpackaged/main/default/objects/Activity/fields/Automated_SMS_Content__c.field-meta.xml
<CustomField>
    <fullName>Automated_SMS_Content__c</fullName>
    <label>Automated SMS Content</label>
    <type>TextArea</type>
</CustomField>