unpackaged/main/default/objects/Activity/fields/Automated_SMS_Number__c.field-meta.xml
<CustomField>
    <fullName>Automated_SMS_Number__c</fullName>
    <label>Automated SMS Number</label>
    <type>Phone</type>
</CustomField>