unpackaged/main/default/objects/Activity/fields/Automated_SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>Automated_SMS_Status__c</fullName>
    <label>Automated SMS Status</label>
    <type>TextArea</type>
</CustomField>