unpackaged/main/default/objects/Activity/fields/Automated_Task_Channel__c.field-meta.xml
<CustomField>
    <fullName>Automated_Task_Channel__c</fullName>
    <label>Automated Task Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>