unpackaged/main/default/objects/Activity/fields/Patient_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Patient_Lifecycle_Stage__c</fullName>
    <description>Stage value (A-D) from Account, used to denote reminder type sent via Make.com</description>
    <label>Patient Lifecycle Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>